--- a/src/plat/bcm2711/overlay-rpi4.dts
+++ b/src/plat/bcm2711/overlay-rpi4.dts
@@ -16,8 +16,8 @@
 		    &{/timer};
 	};
 
-	memory {
+	memory@0 {
 		/* This is configurable in the Pi's config.txt, but we use 128MiB of RAM by default. */
-		reg = <0x00 0x08000000>;
+		reg = <0x00 0x00 0x08000000>;
 	};
 };
